--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@
     }
 
     .container {
-        height: 100%;
+        height: auto;
 
        
     }
@@ -277,7 +277,7 @@
     color: white;
     height: 10%;
    
-    font-size: 4.6rem;
+    font-size: 3.6rem;
     margin-top: 2rem;
 }
 
